[project]
name = "ComfyUI-DMXAPI_mmx"
description = "DMXAPI integration for ComfyUI with Seedream-3.0 text-to-image model"
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/yourusername/ComfyUI-DMXAPI_mmx"

[tool.comfy]
PublisherId = "MuAIGC" 
DisplayName = "DMXAPI Nodes"
Icon = ""  
Tags = ["text-to-image", "ai-generation", "seedream-3.0"]
Compatibility = ">=1.0.0"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
